k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: openbalena
spec: {}
status: {}
