k8s/openbalena-api.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: openbalena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - image: balena/open-balena-api:${OPENBALENA_API_VERSION_TAG}
        name: open-balena-api
        resources: {}
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
            - SYS_RESOURCE
          privileged: true
        volumeMounts:
        - mountPath: /run
          name: api-tmpfs0
        - mountPath: /sys/fs/cgroup
          name: api-tmpfs1
      volumes:
      - emptyDir:
          medium: Memory
        name: api-tmpfs0
      - emptyDir:
          medium: Memory
        name: api-tmpfs1
status: {}
