k8s/openbalena-db.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: db
  namespace: openbalena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
      - image: balena/open-balena-db:${OPENBALENA_DB_VERSION_TAG}
        name: open-balena-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: compose-db
      volumes:
      - name: compose-db
        persistentVolumeClaim:
          claimName: compose-db
status: {}
