k8s/openbalena-s3.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: s3
  name: s3
  namespace: openbalena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: s3
    spec:
      containers:
      - image: balena/open-balena-s3:${OPENBALENA_S3_VERSION_TAG}
        name: s3
        resources: {}
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
              - SYS_RESOURCE
        volumeMounts:
        - mountPath: /export
          name: volume-s3
        - mountPath: /run
          name: s3-tmpfs0
        - mountPath: /sys/fs/cgroup
          name: s3-tmpfs1
      volumes:
      - name: volume-s3
        persistentVolumeClaim:
          claimName: volume-s3
      - name: s3-tmpfs0
        emptyDir:
          medium: Memory
      - name: s3-tmpfs1
        emptyDir:
          medium: Memory
status: {}
