k8s/openbalena-vpn.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vpn
  name: vpn
  namespace: openbalena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vpn
    spec:
      # Add nodeSelector, so you can define where the pods should be created
      # nodeSelector:
      #   doks.digitalocean.com/node-pool: pool-openbalena-vpn

      # Add this affinity to determine that only 1 VPN per pod is going to be created
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - topologyKey: kubernetes.io/hostname
      #       labelSelector:
      #         matchLabels:
      #           app: vpn

      containers:
      - image: balena/open-balena-vpn:${OPENBALENA_VPN_VERSION_TAG}
        name: open-balena-vpn
        resources: {}
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
            - SYS_RESOURCE
          privileged: true
        volumeMounts:
        - mountPath: /run
          name: api-tmpfs0
        - mountPath: /sys/fs/cgroup
          name: api-tmpfs1
      volumes:
      - emptyDir:
          medium: Memory
        name: api-tmpfs0
      - emptyDir:
          medium: Memory
        name: api-tmpfs1
status: {}
