k8s/redis.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis
  namespace: openbalena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        name: redis
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: compose-redis
      volumes:
      - name: compose-redis
        persistentVolumeClaim:
          claimName: compose-redis
status: {}
