k8s/openbalena-api.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: openbalena
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
status:
  loadBalancer: {}
