k8s/openbalena-registry.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
  namespace: openbalena
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: registry
status:
  loadBalancer: {}
