k8s/openbalena-s3.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: s3
  name: s3
  namespace: openbalena
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: s3
status:
  loadBalancer: {}
