k8s/openbalena-vpn.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vpn
  name: vpn
  namespace: openbalena
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  selector:
    app: vpn
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vpn-lb
  name: vpn-lb
  namespace: openbalena
spec:
  ports:
  - port: 3128
    protocol: TCP
    targetPort: 3128
    name: vpn-lb
  type: LoadBalancer
  selector:
    app: vpn
status:
  loadBalancer: {}
